--- a/Lab8.ipynb
+++ b/Lab8.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lab8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyND6Bk21WOQr3L42ygtCg8c",
+      "authorship_tag": "ABX9TyOEfRz/a5ewtD/tuoF38ezv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,18 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/tofighi/ITM760/blob/main/Lab8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this lab, you will get familiar with large-scale machine learning algorithms using Python. You will implement different techniques for predictive analytics. At the end of this lab, you will know:\n",
+        "\n",
+        "1. How to apply support vector machine on your data\n",
+        "2. How to build confusion matrix for the predicted results"
+      ],
+      "metadata": {
+        "id": "F9n59LpPLHz0"
+      }
     },
     {
       "cell_type": "code",
