--- a/Lab5.ipynb
+++ b/Lab5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lab5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPvFjvDsxuy9k6Lix1JHxIT",
+      "authorship_tag": "ABX9TyNDO6CrjLjlGseiNVXAbidC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,10 +79,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 523
+          "height": 517
         },
         "id": "xaUP-LvfEFdO",
-        "outputId": "0ae583a2-6d7c-4292-a17a-aa3347561c50"
+        "outputId": "aff3bbe2-f353-4d3f-f2b7-3683b5bee16b"
       },
       "execution_count": 2,
       "outputs": [
@@ -132,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9vVXMSteELs8",
-        "outputId": "0eb74eb3-f87a-4428-9b74-58ec23d028a0"
+        "outputId": "459e46b3-392f-4498-9b61-503dbc8f391e"
       },
       "execution_count": 3,
       "outputs": [
@@ -152,6 +152,141 @@
           },
           "metadata": {},
           "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://github.com/tofighi/Linear-Algebra/blob/main/4A_Applications.ipynb"
+      ],
+      "metadata": {
+        "id": "ZRs7GZcK3lB1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Using Sympy to calculate pagerank"
+      ],
+      "metadata": {
+        "id": "dYFvUqRVFnO7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sympy as sp\n",
+        "from sympy import Rational\n",
+        "sp.init_printing(use_unicode=True)"
+      ],
+      "metadata": {
+        "id": "UJ3lDjqf3l0z"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flowMat = sp.Matrix([[0,1/2,1,0], [1/3,0,0,1/2], [1/3,0,0,1/2], [1/3,1/2,0,0]])\n",
+        "flowMat"
+      ],
+      "metadata": {
+        "id": "bgisslMyE13W",
+        "outputId": "48352148-8780-4e57-a71b-adbf6547d9a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 98
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}0 & 0.5 & 1 & 0\\\\0.333333333333333 & 0 & 0 & 0.5\\\\0.333333333333333 & 0 & 0 & 0.5\\\\0.333333333333333 & 0.5 & 0 & 0\\end{matrix}\\right]$",
+            "text/plain": [
+              "⎡        0          0.5  1   0 ⎤\n",
+              "⎢                              ⎥\n",
+              "⎢0.333333333333333   0   0  0.5⎥\n",
+              "⎢                              ⎥\n",
+              "⎢0.333333333333333   0   0  0.5⎥\n",
+              "⎢                              ⎥\n",
+              "⎣0.333333333333333  0.5  0   0 ⎦"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rank = sp.Matrix([1/4,1/4,1/4,1/4])\n",
+        "rank"
+      ],
+      "metadata": {
+        "id": "yJ7W9N79FLBd",
+        "outputId": "d7f53e1f-4d6b-4015-bc78-b406f33dacac",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 98
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}0.25\\\\0.25\\\\0.25\\\\0.25\\end{matrix}\\right]$",
+            "text/plain": [
+              "⎡0.25⎤\n",
+              "⎢    ⎥\n",
+              "⎢0.25⎥\n",
+              "⎢    ⎥\n",
+              "⎢0.25⎥\n",
+              "⎢    ⎥\n",
+              "⎣0.25⎦"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(10):\n",
+        "    rank = flowMat*rank\n",
+        "    print(rank)"
+      ],
+      "metadata": {
+        "id": "3CSiEtrrGc8Y",
+        "outputId": "062ca92b-cc7e-4f9b-dcc8-734ac7e77684",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Matrix([[0.375000000000000], [0.208333333333333], [0.208333333333333], [0.208333333333333]])\n",
+            "Matrix([[0.312500000000000], [0.229166666666667], [0.229166666666667], [0.229166666666667]])\n",
+            "Matrix([[0.343750000000000], [0.218750000000000], [0.218750000000000], [0.218750000000000]])\n",
+            "Matrix([[0.328125000000000], [0.223958333333333], [0.223958333333333], [0.223958333333333]])\n",
+            "Matrix([[0.335937500000000], [0.221354166666667], [0.221354166666667], [0.221354166666667]])\n",
+            "Matrix([[0.332031250000000], [0.222656250000000], [0.222656250000000], [0.222656250000000]])\n",
+            "Matrix([[0.333984375000000], [0.222005208333333], [0.222005208333333], [0.222005208333333]])\n",
+            "Matrix([[0.333007812500000], [0.222330729166667], [0.222330729166667], [0.222330729166667]])\n",
+            "Matrix([[0.333496093750000], [0.222167968750000], [0.222167968750000], [0.222167968750000]])\n",
+            "Matrix([[0.333251953125000], [0.222249348958333], [0.222249348958333], [0.222249348958333]])\n"
+          ]
         }
       ]
     }
