--- a/Lab5.ipynb
+++ b/Lab5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lab5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDO6CrjLjlGseiNVXAbidC",
+      "authorship_tag": "ABX9TyMk6+GBoEq3fCSkQ3PSKYAs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
           "height": 517
         },
         "id": "xaUP-LvfEFdO",
-        "outputId": "aff3bbe2-f353-4d3f-f2b7-3683b5bee16b"
+        "outputId": "f6675813-215d-4b22-f1e5-39ef4805bf04"
       },
       "execution_count": 2,
       "outputs": [
@@ -132,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9vVXMSteELs8",
-        "outputId": "459e46b3-392f-4498-9b61-503dbc8f391e"
+        "outputId": "2c39e658-c708-41cd-ab65-3df02abfb7fe"
       },
       "execution_count": 3,
       "outputs": [
@@ -158,15 +158,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://github.com/tofighi/Linear-Algebra/blob/main/4A_Applications.ipynb"
-      ],
-      "metadata": {
-        "id": "ZRs7GZcK3lB1"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "#Using Sympy to calculate pagerank"
       ],
       "metadata": {
@@ -177,7 +168,6 @@
       "cell_type": "code",
       "source": [
         "import sympy as sp\n",
-        "from sympy import Rational\n",
         "sp.init_printing(use_unicode=True)"
       ],
       "metadata": {
@@ -193,12 +183,12 @@
         "flowMat"
       ],
       "metadata": {
-        "id": "bgisslMyE13W",
-        "outputId": "48352148-8780-4e57-a71b-adbf6547d9a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 98
-        }
+        },
+        "id": "bgisslMyE13W",
+        "outputId": "012f68cb-24a3-4848-cab5-d770dfef4169"
       },
       "execution_count": 5,
       "outputs": [
@@ -224,18 +214,52 @@
     {
       "cell_type": "code",
       "source": [
-        "rank = sp.Matrix([1/4,1/4,1/4,1/4])\n",
-        "rank"
+        "flowMat**4"
       ],
       "metadata": {
-        "id": "yJ7W9N79FLBd",
-        "outputId": "d7f53e1f-4d6b-4015-bc78-b406f33dacac",
+        "id": "qb8J9WR-VhKf",
+        "outputId": "d9d2d8fc-6e31-4170-efad-a176b23baff8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 98
         }
       },
       "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}0.375 & 0.125 & 0.25 & 0.5625\\\\0.208333333333333 & 0.3125 & 0.25 & 0.125\\\\0.208333333333333 & 0.3125 & 0.25 & 0.125\\\\0.208333333333333 & 0.25 & 0.25 & 0.1875\\end{matrix}\\right]$",
+            "text/plain": [
+              "⎡      0.375        0.125   0.25  0.5625⎤\n",
+              "⎢                                       ⎥\n",
+              "⎢0.208333333333333  0.3125  0.25  0.125 ⎥\n",
+              "⎢                                       ⎥\n",
+              "⎢0.208333333333333  0.3125  0.25  0.125 ⎥\n",
+              "⎢                                       ⎥\n",
+              "⎣0.208333333333333   0.25   0.25  0.1875⎦"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rank = sp.Matrix([1/4,1/4,1/4,1/4])\n",
+        "rank"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 98
+        },
+        "id": "yJ7W9N79FLBd",
+        "outputId": "b12a1ac5-8768-45e9-bd6c-564722a4a3bc"
+      },
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,30 +276,42 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "for i in range(10):\n",
-        "    rank = flowMat*rank\n",
-        "    print(rank)"
+        "rank = sp.Matrix([1/4,1/4,1/4,1/4])\n",
+        "print(rank)\n",
+        "eps = 0.000000000000001\n",
+        "max_iter = 100\n",
+        "n=0\n",
+        "for i in range(max_iter):\n",
+        "  n = n+1\n",
+        "  temp = rank\n",
+        "  rank = flowMat*rank\n",
+        "  diff = np.linalg.norm(np.array(temp ,dtype=np.float32 )-np.array(rank ,dtype=np.float32))\n",
+        "  print(rank)\n",
+        "  if diff <  eps:\n",
+        "    print(\"steady rank is as follows after \", n, \" stages\", \"for eps= \", eps, \"\\n\", rank )\n",
+        "    break"
       ],
       "metadata": {
-        "id": "3CSiEtrrGc8Y",
-        "outputId": "062ca92b-cc7e-4f9b-dcc8-734ac7e77684",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3CSiEtrrGc8Y",
+        "outputId": "b7401279-4ba4-48de-f17e-fce92a74a71a"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Matrix([[0.250000000000000], [0.250000000000000], [0.250000000000000], [0.250000000000000]])\n",
             "Matrix([[0.375000000000000], [0.208333333333333], [0.208333333333333], [0.208333333333333]])\n",
             "Matrix([[0.312500000000000], [0.229166666666667], [0.229166666666667], [0.229166666666667]])\n",
             "Matrix([[0.343750000000000], [0.218750000000000], [0.218750000000000], [0.218750000000000]])\n",
@@ -285,7 +321,25 @@
             "Matrix([[0.333984375000000], [0.222005208333333], [0.222005208333333], [0.222005208333333]])\n",
             "Matrix([[0.333007812500000], [0.222330729166667], [0.222330729166667], [0.222330729166667]])\n",
             "Matrix([[0.333496093750000], [0.222167968750000], [0.222167968750000], [0.222167968750000]])\n",
-            "Matrix([[0.333251953125000], [0.222249348958333], [0.222249348958333], [0.222249348958333]])\n"
+            "Matrix([[0.333251953125000], [0.222249348958333], [0.222249348958333], [0.222249348958333]])\n",
+            "Matrix([[0.333374023437500], [0.222208658854167], [0.222208658854167], [0.222208658854167]])\n",
+            "Matrix([[0.333312988281250], [0.222229003906250], [0.222229003906250], [0.222229003906250]])\n",
+            "Matrix([[0.333343505859375], [0.222218831380208], [0.222218831380208], [0.222218831380208]])\n",
+            "Matrix([[0.333328247070313], [0.222223917643229], [0.222223917643229], [0.222223917643229]])\n",
+            "Matrix([[0.333335876464844], [0.222221374511719], [0.222221374511719], [0.222221374511719]])\n",
+            "Matrix([[0.333332061767578], [0.222222646077474], [0.222222646077474], [0.222222646077474]])\n",
+            "Matrix([[0.333333969116211], [0.222222010294596], [0.222222010294596], [0.222222010294596]])\n",
+            "Matrix([[0.333333015441895], [0.222222328186035], [0.222222328186035], [0.222222328186035]])\n",
+            "Matrix([[0.333333492279053], [0.222222169240316], [0.222222169240316], [0.222222169240316]])\n",
+            "Matrix([[0.333333253860474], [0.222222248713175], [0.222222248713175], [0.222222248713175]])\n",
+            "Matrix([[0.333333373069763], [0.222222208976746], [0.222222208976746], [0.222222208976746]])\n",
+            "Matrix([[0.333333313465118], [0.222222228844961], [0.222222228844961], [0.222222228844961]])\n",
+            "Matrix([[0.333333343267441], [0.222222218910853], [0.222222218910853], [0.222222218910853]])\n",
+            "Matrix([[0.333333328366280], [0.222222223877907], [0.222222223877907], [0.222222223877907]])\n",
+            "Matrix([[0.333333335816860], [0.222222221394380], [0.222222221394380], [0.222222221394380]])\n",
+            "Matrix([[0.333333332091570], [0.222222222636143], [0.222222222636143], [0.222222222636143]])\n",
+            "steady rank is as follows after  26  stages for eps=  1e-15 \n",
+            " Matrix([[0.333333332091570], [0.222222222636143], [0.222222222636143], [0.222222222636143]])\n"
           ]
         }
       ]
